--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nextjs-course",
   "version": "0.1.0",
   "private": true,
- "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "mongodb": "^6.19.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
